force-app/main/default/objects/Incident__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABLE accounts</fullName>
            </value>
            <value>
                <fullName>APS/CPS</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Drug/Alcohol</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Exploitation</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>General Coordination/Assistance</fullName>
            </value>
            <value>
                <fullName>Guardianship</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Hygiene (environmental/personal)</fullName>
            </value>
            <value>
                <fullName>Legal issues</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Shopping/Budgeting</fullName>
            </value>
            <value>
                <fullName>Vehicles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>